# E-Transport-Marketplace

./: CMakeLists.txt  CMakeSettings.json  README.md
include/: CargoOwner.h  Driver.h  LoginLogout.h  SocketConnection.h  TransportCompany.h  dashboard.h  main.h
libs/sqlite3/: shell.c  sqlite3.h  sqlite3ext.h
src/: CargoOwner.cpp  Dashboard.cpp  Driver.cpp  LoginLogout.cpp  SocketConnection.cpp  TransportCompany.cpp  main.cpp
